--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
         <div class="pic"><img width="80%" src="logo-ipn.png"> </div>
         <div class="pic"><img width="50%"
-                src="">
+                src="img.png">
         </div>
-        <div class="nombre">ZABDI BERENICE HERNANDEZ OSUNA</div>
+        <div class="nombre">ZABDI BERENICE HERNÁNDEZ OSUNA</div>
         <div class="boleta">2023480562</div>
         <div class="carrera">INGENIERÍA AERONÁUTICA</div>
         <div class="escuela">ESIME UNIDAD TICOMÁN</div>
